Added modal for images, always close menu on history toggle, menu button styles

--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,13 @@ i.material-icons {
     position: relative;
     background-color: #222;
     border-color: #333;
-    padding-top: 1rem;
+}
+.eventCard .modal .modal-container {
+    padding: 0;
+    width: auto;
+}
+.eventCard .modal .modal-overlay {
+    background-color: rgba(0,0,0,.75);
 }
 .eventCard .event-icon {
     position: absolute;
@@ -55,9 +61,17 @@ i.material-icons {
 }
 .eventCard .event-expand {
     position: absolute;
-    top: .4rem;
-    right: .4rem;
+    top: 0;
+    right: 0;
+    width: 1.25em;
+    height: 1.25em;
     font-size: 1.25em;
+    text-align: center;
+    background-color: #222;
+    border-color: #333;
+    border-width: 0 0 .05rem .05rem;
+    border-style: solid;
+    cursor: pointer;
 }
 .eventCard .event-menu {
     background: #333;
