--- a/public/style.css
+++ b/public/style.css
@@ -46,6 +46,9 @@ i.material-icons {
     background-color: #222;
     border-color: #333;
 }
+.eventCard.hidden {
+    background-color: #000;
+}
 .eventCard .modal .modal-container {
     padding: 0;
     width: auto;
@@ -93,6 +96,8 @@ i.material-icons {
     text-transform: uppercase;
     font-size: 2em;
     line-height: 1.2em;
+    padding-left: 1.25em;
+    padding-right: 1.25em;
 }
 .eventCard .history .event-value {
     font-size: 1em;
