--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,96 @@ a.active, a:active, a:focus, a:hover {
 i.material-icons {
     font-size: inherit;
 }
+
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #82C2B6;
+    border-radius: 3px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 0px solid #000000;
+    height: 20px;
+    width: 35px;
+    border-radius: 10px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7.5px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #82C2B6;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #82C2B6;
+    border-radius: 3px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 0px solid #000000;
+    height: 20px;
+    width: 35px;
+    border-radius: 10px;
+    background: #FFFFFF;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #82C2B6;
+    border: 0px solid #000000;
+    border-radius: 6px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #82C2B6;
+    border: 0px solid #000000;
+    border-radius: 6px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  input[type=range]::-ms-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 0px solid #000000;
+    height: 20px;
+    width: 35px;
+    border-radius: 10px;
+    background: #FFFFFF;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #82C2B6;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #82C2B6;
+  }
+
+
 .clickable {
     cursor: pointer;
 }
@@ -56,8 +146,14 @@ i.material-icons {
     background-color: #000;
 }
 .eventCard .modal .modal-container {
+    background-color: #222;
     padding: 0;
     width: auto;
+    max-height: 100%;
+    overflow: auto;
+}
+.eventCard .modal .close {
+    font-size: 1.2em;
 }
 .eventCard .modal .modal-overlay {
     background-color: rgba(0,0,0,.75);
@@ -106,6 +202,12 @@ i.material-icons {
     padding-left: 1.25em;
     padding-right: 1.25em;
 }
+.eventCard .event-history {
+    position: absolute;
+    bottom: .8em;
+    right: .8em;
+    cursor: pointer;
+}
 .eventCard .history .event-value {
     font-size: 1em;
 }
@@ -150,8 +252,20 @@ i.material-icons {
 .eventCard .event-value.temperature-110 {
     color: #B81616;
 }
+.eventCard .history,
+.eventCard .keyvalue {
+    background-color: #222;
+    color: #fff;
+    table-layout: fixed;
+}
 .eventCard .history .sparkline text {
     font-size: 8px;
+}
+.eventCard .history .imagetimeline img {
+    max-width: 100%;
+}
+.eventCard .history .imagetimeline input {
+    width: 100%;
 }
 .text-small {
     font-size: .5em;
